--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -13,7 +13,8 @@
                                             data-validation-is-required="true"
                                             data-placeholder-text="Type name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="name">
+                                            data-update-data-field="name"
+                                            autocomplete="off">
                 </igz-validating-input-field>
                 <div class="error" data-ng-show="$ctrl.isShowFieldInvalidState($ctrl.editItemForm, 'itemName')">
                     The inputs you provided are invalid or incorrect
@@ -52,7 +53,8 @@
                                             data-validation-is-required="true"
                                             data-placeholder-text="Type URL..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="url">
+                                            data-update-data-field="url"
+                                            data-auto-complete="off">
                 </igz-validating-input-field>
             </div>
 
@@ -68,39 +70,60 @@
                                             data-validation-is-required="true"
                                             data-placeholder-text="Type mount path..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="volumeMount.mountPath">
+                                            data-update-data-field="volumeMount.mountPath"
+                                            data-auto-complete="off">
                 </igz-validating-input-field>
             </div>
 
             <div class="igz-col-45 attribute-field"
-                 data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volumeMount.subPath)">
+                 data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.accessKey)">
+                <div class="field-label">Access key</div>
+                <igz-validating-input-field class="nuclio-validating-input"
+                                            data-field-type="password"
+                                            data-auto-complete="current-password"
+                                            data-input-name="secretRef"
+                                            data-input-value="$ctrl.item.volume.flexVolume.options.accessKey"
+                                            data-is-focused="false"
+                                            data-form-object="$ctrl.editItemForm"
+                                            data-validation-is-required="true"
+                                            data-placeholder-text="Type session key..."
+                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                            data-update-data-field="volume.flexVolume.options.accessKey"
+                                            data-auto-complete="off">
+                </igz-validating-input-field>
+            </div>
+
+            <div class="igz-col-45 attribute-field"
+                 data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.container)">
                 <div class="field-label">Container name</div>
                 <igz-validating-input-field class="nuclio-validating-input"
                                             data-field-type="input"
                                             data-input-name="containerName"
-                                            data-input-value="$ctrl.containerName"
+                                            data-input-value="$ctrl.item.volume.flexVolume.options.container"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
                                             data-placeholder-text="Type container name..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="containerName">
+                                            data-update-data-field="volume.flexVolume.options.container"
+                                            data-auto-complete="off">
                 </igz-validating-input-field>
             </div>
             <div class="igz-col-45 attribute-field"
-                 data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volumeMount.subPath)">
+                 data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.options.subPath)">
                 <div class="field-label">Sub path</div>
                 <igz-validating-input-field class="nuclio-validating-input"
                                             data-field-type="input"
                                             data-auto-complete="off"
                                             data-input-name="containerSubPath"
-                                            data-input-value="$ctrl.containerSubPath"
+                                            data-input-value="$ctrl.item.volume.flexVolume.options.subPath"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.editItemForm"
-                                            data-validation-is-required="true"
+                                            data-validation-is-required="false"
                                             data-placeholder-text="Type path in container..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="containerSubPath">
+                                            data-update-data-field="volume.flexVolume.options.subPath"
+                                            data-auto-complete="off">
                 </igz-validating-input-field>
             </div>
 
@@ -117,23 +140,6 @@
                                             data-placeholder-text="Type host path..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="volume.hostPath.path">
-                </igz-validating-input-field>
-            </div>
-
-            <div class="igz-col-45 attribute-field"
-                 data-ng-if="$ctrl.isClassSelected() && !$ctrl.isNil($ctrl.item.volume.flexVolume.secretRef.name)">
-                <div class="field-label">Access key</div>
-                <igz-validating-input-field class="nuclio-validating-input"
-                                            data-field-type="password"
-                                            data-auto-complete="current-password"
-                                            data-input-name="secretRef"
-                                            data-input-value="$ctrl.item.volume.flexVolume.secretRef.name"
-                                            data-is-focused="false"
-                                            data-form-object="$ctrl.editItemForm"
-                                            data-validation-is-required="true"
-                                            data-placeholder-text="Type session key..."
-                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-update-data-field="volume.flexVolume.secretRef.name">
                 </igz-validating-input-field>
             </div>
 
