Switch places Replicas and Target CPU

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
@@ -39,37 +39,8 @@
                     width: 35%
                 }
 
-                .gpu-number-input {
+                .gpu-number-input, .replicas-number-input {
                     width: 85%;
-                }
-            }
-        }
-
-        .replicas-values {
-            .inputs {
-                display: flex;
-                align-items: center;
-                margin-top: 5px;
-
-                .values-label {
-                    .duskThree(0.9);
-                    margin: 0 25px 0 8px;
-                    font-size: 14px;
-                    font-weight: normal;
-                    font-style: normal;
-                    letter-spacing: normal;
-                    text-align: left;
-                    color: @color;
-
-                    &:last-child {
-                        margin-right: 0;
-                    }
-                }
-
-                .container-wizard-number-input {
-                    min-width: 80px;
-                    width: 80px;
-                    padding: 0 5px;
                 }
             }
         }
