IG-2185 [General] Pagination input doesn't set any value

--- a/src/igz_controls/components/pagination/pagination.component.tpl.html
+++ b/src/igz_controls/components/pagination/pagination.component.tpl.html
@@ -26,6 +26,7 @@
                                     data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                     data-item-blur-callback="$ctrl.jumpToPage()"
                                     data-validation-is-required="true"
+                                    data-hide-counter="true"
                                     class="jump-to-page-input">
         </igz-validating-input-field>
 
