Fix blocks positions

--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -53,7 +53,6 @@
         padding: 0;
         text-align: left;
         background-color: @number-input-field-bg-color;
-        width: 100%;
     }
 
     .additional-left-block {
@@ -112,6 +111,14 @@
                 cursor: default;
             }
         }
+    }
+
+    .flex-none {
+        flex: 0 0 auto;
+    }
+
+    .flex-auto {
+        flex: 1 1 auto;
     }
 }
 
