Add some flexibility classes

--- a/src/igz_controls/less/helpers.less
+++ b/src/igz_controls/less/helpers.less
@@ -44,6 +44,25 @@
     align-items: center;
 }
 
+.justify-content-center {
+    display: flex;
+    justify-content: center;
+}
+
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flex-none {
+    flex: 0 0 auto;
+}
+
+.flex-auto {
+    flex: 1 1 auto;
+}
+
 .default-cursor {
     cursor: default !important;
 }
