IG-2205 [Nuclio] Triggers>Cron>Schedule: display all 6 values

--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -49,7 +49,7 @@
                         <span class="field-label">Secret</span>:&nbsp;{{ $ctrl.item.secret }};&nbsp;
                     </span>
                     <span data-ng-repeat="(key, value) in $ctrl.item.attributes">
-                        <span class="field-label">{{ key }}</span>:&nbsp;{{ value }};&nbsp;
+                        <span class="field-label">{{ key }}</span>:&nbsp;{{ $ctrl.getAttributeValue(key, value) }};&nbsp;
                     </span>
                     <span data-ng-if="!$ctrl.isNil($ctrl.item.annotations)">
                         <span class="field-label">Annotations</span>: {{ $ctrl.item.annotations }};
