--- a/src/igz_controls/components/search-input/search-input.tpl.html
+++ b/src/igz_controls/components/search-input/search-input.tpl.html
@@ -2,6 +2,8 @@
     <input type="text"
            class="container-search-input"
            placeholder="{{$ctrl.placeholder}}"
+           data-ng-focus="$ctrl.toggleInputFocus()"
+           data-ng-blur="$ctrl.toggleInputFocus()"
            data-ng-keydown="$ctrl.onPressEnter($event)"
            data-igz-input-blur-on-enter
            data-ng-model="$ctrl.searchQuery"
