--- a/src/igz_controls/less/table.less
+++ b/src/igz_controls/less/table.less
@@ -37,7 +37,7 @@
         position: relative;
         text-overflow: ellipsis;
 
-        .item-cell-sub-tex {
+        .item-cell-sub-text {
             font-size: 12px;
             color: @item-cell-sub-text-color;
         }
