IG-2214 [Clusters][Nodes] Add app clusters and app nodes (igz-grid updated)

--- a/src/igz_controls/less/igz-grid.less
+++ b/src/igz_controls/less/igz-grid.less
@@ -185,6 +185,14 @@
     width: 60%;
 }
 
+&.igz-col-62 {
+    width: 62%;
+}
+
+&.igz-col-62-5 {
+    width: 62.5%;
+}
+
 &.igz-col-65 {
     width: 65%;
 }
