--- a/src/igz_controls/less/igz-grid.less
+++ b/src/igz_controls/less/igz-grid.less
@@ -93,6 +93,10 @@
     width: 14.28%;
 }
 
+&.igz-col-14-5 {
+    width: 14.5%;
+}
+
 &.igz-col-15 {
     width: 15%;
 }
@@ -179,6 +183,14 @@
 
 &.igz-col-60 {
     width: 60%;
+}
+
+&.igz-col-62 {
+    width: 62%;
+}
+
+&.igz-col-62-5 {
+    width: 62.5%;
 }
 
 &.igz-col-65 {
