IG-2225 [General] "More info" icon: make as common component (updated)

--- a/src/igz_controls/components/more-info/more-info.tpl.html
+++ b/src/igz_controls/components/more-info/more-info.tpl.html
@@ -1,18 +1,19 @@
 <div class="more-info-wrapper">
-    <div data-ng-if="!$ctrl.isTooltipEnabled"
+    <div data-ng-if="!$ctrl.isDefaultTooltipEnabled"
          data-ng-class="{'disabled': $ctrl.isDisabled}"
-         class="question-mark igz-icon-help-round"></div>
-    <div data-ng-if="!$ctrl.isTooltipEnabled"
+         class="question-mark igz-icon-help-round">
+    </div>
+    <div data-ng-if="!$ctrl.isDefaultTooltipEnabled"
          class="row-description wizard-row-description">
         {{$ctrl.description}}
     </div>
 
-    <div data-ng-if="$ctrl.isTooltipEnabled"
+    <div data-ng-if="$ctrl.isDefaultTooltipEnabled"
          data-ng-class="{'disabled': $ctrl.isDisabled}"
          class="question-mark igz-icon-help-round"
          data-uib-tooltip="{{$ctrl.description}}"
-         data-tooltip-placement="$ctrl.tooltipPlacement"
-         data-tooltip-popup-delay="$ctrl.tooltipPopupDelay"
+         data-tooltip-placement="$ctrl.defaultTooltipPlacement"
+         data-tooltip-popup-delay="$ctrl.defaultTooltipPopupDelay"
          data-tooltip-append-to-body="true">
     </div>
 </div>
