--- a/src/igz_controls/components/more-info/more-info.less
+++ b/src/igz_controls/components/more-info/more-info.less
@@ -1,5 +1,5 @@
 .more-info-wrapper {
-    .new-item-wizard-color-set();
+    .more-info-color-set();
 
     position: relative;
     display: flex;
@@ -8,14 +8,10 @@
     padding-left: 15px;
 
     .question-mark {
-        .descriptive-icons-color-set();
-
         cursor: pointer;
 
         &.disabled {
-            &, &:before {
-                cursor: default;
-            }
+            cursor: default;
         }
 
         &:before {
@@ -25,33 +21,33 @@
 
         &:hover {
             &:before {
-                color: @icon-help-round-hover-before-color !important;
+                color: @icon-help-round-hover-before-color;
             }
 
             + div {
-                color: @icon-help-description-hover-color !important;
+                color: @icon-help-description-hover-color;
                 display: block;
             }
         }
     }
 
     .row-description {
-        margin-left: 35px;
-        position: absolute !important;
-        border-radius: 2px;
-        box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.25);
-        background-color: @white;
-        font-family: @font-family-sans-serif;
-        color: @dusk-three;
-        font-size: 12px;
-        padding: 16px 19px;
-        width: 280px;
         display: none;
+        width: 280px;
+        margin-left: 35px;
+        padding: 16px 19px;
+        position: absolute;
         top: calc(50% - 19px);
+        border-radius: 2px;
+        box-shadow: @row-description-box-shadow;
+        background-color: @row-description-bg-color;
+        color: @row-description-color;
+        font-family: @font-family-sans-serif;
+        font-size: 12px;
         white-space: pre-line;
 
         &:before {
-            .triangle-arrow(right; @white; 8px; 10px);
+            .triangle-arrow(right; @row-description-triangle-color; 8px; 10px);
 
             position: absolute;
             top: 7px;
