--- a/src/igz_controls/components/more-info/more-info.tpl.html
+++ b/src/igz_controls/components/more-info/more-info.tpl.html
@@ -4,7 +4,7 @@
          class="question-mark igz-icon-help-round">
     </div>
     <div data-ng-if="!$ctrl.isDefaultTooltipEnabled"
-         class="row-description wizard-row-description">
+         class="row-description">
         {{$ctrl.description}}
     </div>
 
