Add scroll to textareas

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -41,7 +41,7 @@
                 height: 70px;
                 resize: none;
                 white-space: pre;
-                overflow-x: auto;
+                overflow: auto;
             }
         }
     }
