Add style for placeholder

--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -55,6 +55,36 @@
         background-color: @number-input-field-bg-color;
     }
 
+    //
+    // placeholder
+    //
+
+    ::-webkit-input-placeholder {
+        /* Chrome, Chromium, Edge, Safari, Opera*/
+        color: @number-input-placeholder-color;
+    }
+
+    :-moz-placeholder {
+        /* Firefox 4-18 */
+        color: @number-input-placeholder-color;
+    }
+
+    ::-moz-placeholder {
+        /* Firefox 19+ */
+        color: @number-input-placeholder-color;
+    }
+
+    :-ms-input-placeholder {
+        /* - Internet Explorer 10–11
+           - Internet Explorer Mobile 10-11 */
+        color: @number-input-placeholder-color !important;
+    }
+
+    ::placeholder {
+        /* modern browser versions */
+        color: @number-input-placeholder-color;
+    }
+
     .additional-left-block {
         .prefix-unit {
             color: @number-input-additional-left-block-prefix-unit-color;
