--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
@@ -53,7 +53,8 @@
             }
 
             .slider-row {
-                width: 74%;
+                width: 65%;
+                margin-left: 15px;
             }
         }
     }
