--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -1,4 +1,8 @@
 .ncl-version-configuration-build {
+    &.disabled {
+        opacity: .5;
+    }
+
     .build-field {
         margin-bottom: 23px;
 
